--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,6 @@
-<p>dashboard works! id="username-input"  id="password-input"</p>
+<div>
+  <p>dashboard works! id="username-input"  id="password-input"</p>
+  <button (click)="getDashBoards()">getDashBoards</button>
+</div>
+
 <iframe id="tbiframe" width="100%" height="800px" frameBorder="0" [src]="dashboardUrlSafe"></iframe>
