--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,30 @@
-<mat-sidenav-container class="example-container">
-  <mat-sidenav mode="side" opened>
-    <mat-list>
-      <mat-list-item routerLink="/"> Home </mat-list-item>
-      <mat-list-item> Assets </mat-list-item>
-      <mat-list-item routerLink="/devices"> Devices </mat-list-item>
-      <mat-list-item> Entity views </mat-list-item>
-      <mat-list-item routerLink="/dashboards"> DashBoards </mat-list-item>
-     </mat-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <p>login worksss!</p>
-    <button (click)="login()">Login</button>
-    <button (click)="getUser()">GetUser</button>
+<button (click)="login()">Login</button>
+<mat-card>
+  <mat-card-title>Login</mat-card-title>
+<mat-card-content>
+<form [formGroup]="form" (ngSubmit)="submit()">
+<p>
+  <mat-form-field>
+    <input type="text" matInput placeholder="Username" formControlName="username">
+  </mat-form-field>
+</p>
 
-    <button (click)="getDashBoards()">getDashBoards</button>
+<p>
+  <mat-form-field>
+    <input type="password" matInput placeholder="Password" formControlName="password">
+  </mat-form-field>
+</p>
 
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<p *ngIf="error" class="error">
+  {{ error }}
+</p>
 
+<div class="button">
+  <button type="submit" mat-button>Login</button>
+</div>
+
+</form>
+</mat-card-content>
+</mat-card>
 
 
