--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,3 +6,16 @@
   right: 0;
   background: #eee;
 }
+ svg
+ {
+  padding-right:10px;
+ }
+
+ .example-spacer {
+  flex: 1 1 auto;
+}
+.toolbar-container
+{
+  background-color: #286968;
+}
+
