--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <mat-card>
   <mat-card-title>Login</mat-card-title>
 <mat-card-content>
-<form [formGroup]="form" (ngSubmit)="submit()">
+<form [formGroup]="form" (ngSubmit)="login()">
 <p>
   <mat-form-field>
     <input type="text" matInput placeholder="Username" formControlName="username">
