--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,52 +1,9 @@
 <mat-sidenav-container class="example-container">
   <mat-sidenav mode="side" opened>
     <div>
-      <div class="logo-container">
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="180.47" height="39.253"
-        viewBox="0 0 180.47 39.253">
-        <defs>
-          <linearGradient id="linear-gradient" x1="-0.031" y1="0.577" x2="1.031" y2="0.423"
-            gradientUnits="objectBoundingBox">
-            <stop offset="0" stop-color="#122729" />
-            <stop offset="0.361" stop-color="#0f393b" />
-            <stop offset="1" stop-color="#096366" />
-          </linearGradient>
-        </defs>
-        <g id="Group_2" data-name="Group 2" transform="translate(-194.888 -141.984)">
-          <g id="Group_620" data-name="Group 620" transform="translate(237.223 144.539)">
-            <path id="Path_821" data-name="Path 821"
-              d="M294.937,167.347h3.056l.39,2.764h.065a5.6,5.6,0,0,1,4.974-2.959,6.78,6.78,0,0,1,1.235.1v3.641a5.968,5.968,0,0,0-1.333-.13c-2.276,0-4.551,1.365-4.551,4.779V185.1h-3.836Z"
-              transform="translate(-294.937 -159.057)" fill="#286968" />
-            <path id="Path_822" data-name="Path 822"
-              d="M334.2,177.083H321.46a5.733,5.733,0,0,0,6.014,4.941,9.343,9.343,0,0,0,5.786-2.113v3.446a10.8,10.8,0,0,1-6.177,1.853c-5.819,0-9.33-3.771-9.33-9.233,0-5.689,3.966-9.362,8.713-9.362,4.291,0,7.834,3.088,7.834,8.972A10.476,10.476,0,0,1,334.2,177.083Zm-3.543-2.568c-.1-3.154-2.015-4.714-4.226-4.714a5.158,5.158,0,0,0-5.007,4.714Z"
-              transform="translate(-308.099 -158.748)" fill="#286968" />
-            <path id="Path_823" data-name="Path 823"
-              d="M360.394,175.945c0-5.657,3.9-9.33,7.965-9.33a6.989,6.989,0,0,1,6.144,3.478l.423-3.056h3.186v17.75h-3.186l-.423-3.056a6.989,6.989,0,0,1-6.144,3.478C364.295,185.21,360.394,181.537,360.394,175.945Zm13.979-.033c0-3.381-2.211-5.786-5.039-5.786-2.893,0-5.1,2.406-5.1,5.786,0,3.413,2.211,5.787,5.1,5.787C372.162,181.7,374.373,179.326,374.373,175.912Z"
-              transform="translate(-332.696 -158.748)" fill="#286968" />
-            <path id="Path_824" data-name="Path 824" d="M407.489,148.022h3.836v26.04h-3.836Z"
-              transform="translate(-359.863 -148.022)" fill="#286968" />
-            <path id="Path_825" data-name="Path 825"
-              d="M433.981,167.321v4.421a10.444,10.444,0,0,0-5.494-1.593c-1.625,0-2.536.553-2.536,1.431,0,.975,1.041,1.365,3.089,1.918,2.958.715,6.112,1.723,6.112,5.527,0,3.543-2.8,5.819-7.672,5.819a11.865,11.865,0,0,1-6.437-1.69v-4.779a9.7,9.7,0,0,0,6.21,2.243c1.82,0,2.86-.585,2.86-1.56,0-1.106-1.3-1.463-3.641-2.113-2.861-.813-5.527-1.983-5.527-5.266,0-3.316,2.7-5.754,7.347-5.754A11.33,11.33,0,0,1,433.981,167.321Z"
-              transform="translate(-367.626 -158.348)" fill="#1d2829" />
-            <path id="Path_826" data-name="Path 826"
-              d="M474.283,176.846H462.027c.683,2.568,2.926,3.9,5.657,3.9a10.466,10.466,0,0,0,5.624-1.788v4.259a12.361,12.361,0,0,1-6.274,1.625c-6.339,0-9.98-3.934-9.98-9.4,0-5.721,4.031-9.525,9.038-9.525,4.584,0,8.322,3.153,8.322,9.168A9.632,9.632,0,0,1,474.283,176.846Zm-4.812-3.121c-.032-2.341-1.5-3.706-3.413-3.706a4.333,4.333,0,0,0-4.129,3.706Z"
-              transform="translate(-388.455 -158.348)" fill="#1d2829" />
-            <path id="Path_827" data-name="Path 827"
-              d="M518.228,172.36v12.028h-5.2V173.855c0-2.21-.975-3.218-2.861-3.218a2.979,2.979,0,0,0-3.121,3.089v10.663h-5.2v-18.01h4.031l.52,2.535h.1a6.334,6.334,0,0,1,5.429-2.991C515.822,165.923,518.228,168.329,518.228,172.36Z"
-              transform="translate(-414.292 -158.348)" fill="#1d2829" />
-            <path id="Path_828" data-name="Path 828"
-              d="M557.364,167.321v4.421a10.443,10.443,0,0,0-5.494-1.593c-1.625,0-2.535.553-2.535,1.431,0,.975,1.04,1.365,3.088,1.918,2.958.715,6.112,1.723,6.112,5.527,0,3.543-2.8,5.819-7.672,5.819a11.863,11.863,0,0,1-6.437-1.69v-4.779a9.7,9.7,0,0,0,6.209,2.243c1.82,0,2.861-.585,2.861-1.56,0-1.106-1.3-1.463-3.641-2.113-2.861-.813-5.527-1.983-5.527-5.266,0-3.316,2.7-5.754,7.347-5.754A11.329,11.329,0,0,1,557.364,167.321Z"
-              transform="translate(-438.8 -158.348)" fill="#1d2829" />
-            <path id="Path_829" data-name="Path 829"
-              d="M597.59,176.846H585.334c.683,2.568,2.926,3.9,5.657,3.9a10.466,10.466,0,0,0,5.624-1.788v4.259a12.361,12.361,0,0,1-6.274,1.625c-6.339,0-9.98-3.934-9.98-9.4,0-5.721,4.031-9.525,9.037-9.525,4.584,0,8.322,3.153,8.322,9.168A9.668,9.668,0,0,1,597.59,176.846Zm-4.811-3.121c-.033-2.341-1.5-3.706-3.414-3.706a4.333,4.333,0,0,0-4.129,3.706Z"
-              transform="translate(-459.585 -158.348)" fill="#1d2829" />
-          </g>
-          <path id="Path_830" data-name="Path 830"
-            d="M226,150.778,212.552,142.4a2.741,2.741,0,0,0-2.918,0l-13.446,8.374a2.743,2.743,0,0,0-1.3,2.342V170.1a2.744,2.744,0,0,0,1.3,2.342l13.446,8.374a2.742,2.742,0,0,0,2.918,0L226,172.442a2.743,2.743,0,0,0,1.3-2.342V153.12A2.742,2.742,0,0,0,226,150.778Zm-15.176-6.373,10.581,12.8-16.42-9.162Zm-1.831,32.439-10.83-6.674,4.988-16.3Zm-1.709-14.434,17.607-.763-13.4,17.073Zm-.426-.829-3.271-12.866,21.6,12.052v.019Zm18.326-8.461v6.665l-11.965-14.475,11.662,7.264A.638.638,0,0,1,225.182,153.12Zm-27.875-.546,5.522-3.439L197,168.168V153.12A.64.64,0,0,1,197.307,152.575Zm27.572,18.071-11.7,7.286,12-15.289V170.1A.641.641,0,0,1,224.879,170.646Z"
-            fill="url(#linear-gradient)" />
-        </g>
-      </svg>
-      </div>
+
+       <mat-icon  class="header-icon" svgIcon="realsense_icon"></mat-icon>
+
       <mat-divider></mat-divider>
       <mat-list role="list" *ngFor="let menu of appitemsTravel">
         <mat-list-item routerLink="{{menu.link}}" (click)="menuChange(menu)" role="listitem">
