--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,28 +1,36 @@
- :host {
-        display: flex;
-        justify-content: center;
-        margin: 100px 0px;
-      }
+:host {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0px;
+ }
 
-      .mat-form-field {
-        width: 100%;
-        min-width: 300px;
-      }
+.mat-form-field {
+  width: 100%;
+  min-width: 300px;
+}
 
-      mat-card-title,
-      mat-card-content {
-        display: flex;
-        justify-content: center;
-      }
+mat-card-title,
+mat-card-content {
+  display: flex;
+  justify-content: center;
+}
 
-      .error {
-        padding: 16px;
-        width: 300px;
-        color: white;
-        background-color: red;
-      }
+.error {
+  padding: 16px;
+  width: 300px;
+  color: white;
+  background-color: red;
+}
 
-      .button {
-        display: flex;
-        justify-content: flex-end;
-      }
+.button {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.header-icon {
+  align-content: center;
+  margin-top: 16px;
+  padding-left: 18px;
+  height: 70%;
+  width: 70%;
+}
