--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,5 @@
-<button (click)="login()">Login</button>
 <mat-card>
-  <mat-card-title>Login</mat-card-title>
+  <mat-card-title><mat-icon class="header-icon" svgIcon="realsense_icon"></mat-icon></mat-card-title>
 <mat-card-content>
 <form [formGroup]="form" (ngSubmit)="login()">
 <p>
@@ -15,8 +14,8 @@
   </mat-form-field>
 </p>
 
-<p *ngIf="error" class="error">
-  {{ error }}
+<p *ngIf="errorMessage" class="error">
+  {{ errorMessage }}
 </p>
 
 <div class="button">
