--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
+<p *ngIf="NoDashError" class="error">
+    {{ NoDashError }}
+  </p>
 <iframe id="tbiframe" width="100%" height="800px" frameBorder="0" [src]="dashboardUrlSafe"></iframe>
