--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -33,6 +33,11 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+      <mat-paginator [length]="length"
+               [pageSize]="pageSize"
+               [pageSizeOptions]="pageSizeOptions"
+               aria-label="Select page">
+      </mat-paginator>
 
     </mat-card-content>
   </mat-card>
