--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title><mat-icon class="header-icon" svgIcon="realsense_icon"></mat-icon></mat-card-title>
 <mat-card-content>
-<form [formGroup]="form" (ngSubmit)="login()">
+<form  *ngIf="iframeLoaded" [formGroup]="form" (ngSubmit)="login()">
 <p>
   <mat-form-field>
     <input type="text" matInput placeholder="Username" formControlName="username">
@@ -21,10 +21,9 @@
 <div class="button">
   <button type="submit" mat-button>Login</button>
 </div>
-
 </form>
 </mat-card-content>
 </mat-card>
-<iframe id="tbiframe" width="100%" height="800px" frameBorder="0" [src]="loginUrlSafe" ></iframe>
+<iframe id="tbiframe" width="100%" height="100%" frameBorder="0" [src]="loginUrlSafe" ></iframe>
 
 
