--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,9 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar class="toolbar-container">
-      <p>CRUMBY: <app-BreadcrumbComponent></app-BreadcrumbComponent></p>
+      <span>
+      <app-BreadcrumbComponent></app-BreadcrumbComponent>
+      </span>
       <span class="example-spacer"></span>
       <button mat-button class="button" aria-label="Example icon-button with share icon">
         <svg xmlns="http://www.w3.org/2000/svg" width="39.007" height="47.242" viewBox="0 0 39.007 47.242">
