--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,44 @@
 <p *ngIf="NoDashError" class="error">
     {{ NoDashError }}
   </p>
-<iframe id="tbiframe" width="100%" height="800px" frameBorder="0" [src]="dashboardUrlSafe"></iframe>
+  <div>
+    <mat-card>
+      <mat-card-content>
+        <table mat-table [dataSource]="listOfDashBoards" class="mat-elevation-z8">
+
+          <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> DashBoard Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.id.id}} </td>
+          </ng-container>
+
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="label">
+            <th mat-header-cell *matHeaderCellDef> label </th>
+            <td mat-cell *matCellDef="let element"> {{element.label}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [length]="length"
+                 [pageSize]="pageSize"
+                 [pageSizeOptions]="pageSizeOptions"
+                 aria-label="Select page" class="mat-elevation-z8">
+        </mat-paginator>
+
+      </mat-card-content>
+    </mat-card>
+
+  </div>
+<!-- <iframe id="tbiframe" width="100%" height="800px" frameBorder="0" [src]="dashboardUrlSafe"></iframe> -->
