--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -36,11 +36,10 @@
       <mat-paginator [length]="length"
                [pageSize]="pageSize"
                [pageSizeOptions]="pageSizeOptions"
-               aria-label="Select page">
+               aria-label="Select page" class="mat-elevation-z8">
       </mat-paginator>
 
     </mat-card-content>
   </mat-card>
 
 </div>
-<app-device-details></app-device-details>
