--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   </p>
   <div>
     <mat-card>
-      <mat-card-content>
+      <mat-card-content *ngIf="!displayDash">
         <table mat-table [dataSource]="listOfDashBoards" class="mat-elevation-z8">
 
           <!--- Note that these columns can be defined in any order.
@@ -27,6 +27,12 @@
             <th mat-header-cell *matHeaderCellDef> label </th>
             <td mat-cell *matCellDef="let element"> {{element.label}} </td>
           </ng-container>
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>  </th>
+            <td mat-cell *matCellDef="let element">
+              <button class="dashbutton" (click)="displayDashboard(element.id.id)">OpenDashBoard</button>
+              </td>
+          </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -36,8 +42,10 @@
                  [pageSizeOptions]="pageSizeOptions"
                  aria-label="Select page" class="mat-elevation-z8">
         </mat-paginator>
-
       </mat-card-content>
+      <mat-card-content  *ngIf="displayDash">
+        <app-dashboard-display [DashboardId] ="selectedDashId"></app-dashboard-display>
+      </mat-card-content >
     </mat-card>
 
   </div>
