fixed dashboard reload

--- a/src/app/dashboard-display/dashboard-display.component.css
+++ b/src/app/dashboard-display/dashboard-display.component.css
@@ -1,9 +1,5 @@
-iframe.tb-default mat-fab-toolbar.mat-primary .mat-fab-toolbar-background
+.tb-default.mat-toolbar.mat-primary
 {
-  background-color: blueviolet;
-}
-
-::ng-deep mat-fab-toolbar
-{
-  background-color: blueviolet;
+  background: green !important;
+  color:brown !important;
 }
