--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,33 +18,49 @@
 {
   background-color: #286968;
   height: 78px;
+  color :white;
+}
+
+/* .header-list-item
+{
+  height: 78px;
+} */
+.header-list
+{
+  height: 78px;
+  padding-top: 0px;
 }
 
 .sidenav-icon
 {
-  height: 43px;
+  height: 35px;
   width:35px;
   padding-right: 10px;
+}
 
-
+.side-list
+{
+  padding-top: 0px;
 }
 
 .mat-list-base .mat-list-item {
   color: #286968;
   font-family: 'Poppins', sans-serif;
+  padding-top: 0px;
 }
 
-.mat-sidenav
+mat-sidenav
 {
   width:337px;
+  background-color: #F8F8F8;
+  background-image: url(../../assets/background.png);
 }
 
 .header-icon
 {
   align-content: center;
-  margin-top: 17px;
-  padding-left: 16px;
-  height: 78px;
+  padding-top: 40px;
+  padding-left: 3px;
+  height: 39.25px;
   width: 180px;
 }
-
