--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card >
   <mat-card-title><mat-icon class="header-icon" svgIcon="realsense_icon"></mat-icon></mat-card-title>
 <mat-card-content>
 <form  *ngIf="iframeLoaded" [formGroup]="form" (ngSubmit)="login()">
@@ -22,8 +22,9 @@
   <button type="submit" mat-button>Login</button>
 </div>
 </form>
+<div class="loader" *ngIf="!iframeLoaded"></div>
 </mat-card-content>
 </mat-card>
-<iframe id="tbiframe" width="100%" height="100%" frameBorder="0" [src]="loginUrlSafe" ></iframe>
+<iframe id="tbiframe" width="100%" height="100%" frameBorder="0" [src]="loginUrlSafe"></iframe>
 
 
