--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="example-container">
-  <mat-sidenav class="side-nav" mode="side" opened>
+  <mat-sidenav class="side-nav" mode="side" opened="true">
     <div>
       <mat-list class="header-list">
         <!-- class="header-list-item" -->
