--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,6 +25,6 @@
 <div class="loader" *ngIf="!iframeLoaded"></div>
 </mat-card-content>
 </mat-card>
-<iframe id="tbiframe" width="100%" height="100%" frameBorder="0" [src]="loginUrlSafe"></iframe>
+<iframe id="tbiframe" width="1px" height="1px" frameBorder="0" [src]="loginUrlSafe"></iframe>
 
 
