--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>  </th>
             <td mat-cell *matCellDef="let element">
-              <button class="dashbutton" (click)="displayDashboard(element.id.id)">OpenDashBoard</button>
+              <button class="dashbutton" (click)="displayDashboard(element.id.id)">Open Dashboard</button>
               </td>
           </ng-container>
 
